[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/historia.png" type="Texture" id=1]
[ext_resource path="res://cenas/CenaFora.gd" type="Script" id=2]
[ext_resource path="res://npcs/npc8.tres" type="Texture" id=3]
[ext_resource path="res://cenas/Menu_player.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Andando"

[node name="CenaFora" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1027.0
margin_bottom = 605.0
color = Color( 0, 0, 0, 1 )

[node name="Historia" type="Sprite" parent="."]
position = Vector2( 523, 302 )
scale = Vector2( 1.6653, 1.46698 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
visible = false
margin_right = 12.0
margin_bottom = 20.0
action_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Andando = SubResource( 1 )

[node name="Npc8" type="Sprite" parent="."]
position = Vector2( 432, 479 )
scale = Vector2( 2.125, 1.95 )
texture = ExtResource( 3 )

[node name="Menu_player" parent="." instance=ExtResource( 4 )]
position = Vector2( 402, 242 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
